--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   drift: ^2.19.1+1
   drift_flutter: ^0.1.0
   dartz: ^0.10.1
+  go_router: ^14.2.3
 
 dev_dependencies:
   flutter_test:
